--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,10 +3,10 @@ name: Test application
 on:
   push:
     branches:
-      - master
+      - main
   pull_request:
     branches:
-      - master
+      - main
   workflow_dispatch:
 
 env:
@@ -26,8 +26,6 @@ jobs:
 
       - name: Run poetry
         uses: abatilo/actions-poetry@v2
-        with:
-          poetry-version: ${{ env.PYTHON_VERSION }}
 
       - name: Setup a local virtual environment (if no poetry.toml file)
         run: |
