--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -11,13 +11,15 @@ on:
 
 env:
   PYTHON_VERSION: "3.10"
+  JWT_SECRET_KEY: ${{ secrets.JWT_SECRET_KEY }}
+  JWT_ALGORITHM: ${{ secrets.JWT_ALGORITHM }}
 
 jobs:
   TEST:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v2
