--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ pydantic = {extras = ["email"], version = "^2.6.3"}
 gunicorn = "^21.2.0"
 pytest = "^8.0.2"
 httpx = "^0.27.0"
+logging = "^0.4.9.6"
+coverage = "^7.4.3"
 
 
 [build-system]
